<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mikez.festpaycustomer.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/register_button_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:src="@drawable/button_back_accent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:orientation="vertical"
        android:padding="5dp">


        <EditText
            android:id="@+id/register_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:hint="@string/register_email"
            android:imeActionLabel="Next"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/silverDark"
            android:textColorHint="@color/silverDark"
            android:backgroundTint="@color/silverDark"/>


        <EditText
            android:id="@+id/register_edit_confirm_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:hint="Confirm E-mail"
            android:imeActionLabel="Next"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/silverDark"
            android:textColorHint="@color/silverDark"
            android:backgroundTint="@color/silverDark"/>


        <EditText
            android:id="@+id/register_edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:hint="@string/firstpage_password"
            android:imeActionLabel="Next"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/silverDark"
            android:textColorHint="@color/silverDark"
            android:backgroundTint="@color/silverDark"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/register_edit_confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/register_confirmpass"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/silverDark"
            android:textColorHint="@color/silverDark"
            android:backgroundTint="@color/silverDark"/>

        <Button
            android:id="@+id/register_button_register"
            android:layout_width="128dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/corners_blue"
            android:text="@string/firstpage_register_button"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20dp" />
    </LinearLayout>


</LinearLayout>
